--- a/.github/workflows/stm32.yml
+++ b/.github/workflows/stm32.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
       # Checks out a copy of your repository on the ubuntu-latest machine
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout
 
       - name: Build code
-        uses: xanderhendriks/action-build-stm32cubeide@v5.0
+        uses: xanderhendriks/action-build-stm32cubeide@v10.0
         with:
           project-path: '.'
           project-target: 'TagV3.0_U5_VGT'
