--- a/.github/workflows/stm32.yml
+++ b/.github/workflows/stm32.yml
@@ -21,4 +21,4 @@ jobs:
         uses: xanderhendriks/action-build-stm32cubeide@v5.0
         with:
           project-path: 'TagV3.0_U5_VGT'
-          project-target: 'TagV3.0_U5_VGT.elf'
+          project-target: 'TagV3.0_U5_VGT'
