create workspace around project

--- a/TagV3.0_U575VGT/.project
+++ b/TagV3.0_U575VGT/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TagV3.0_U5_VGT</name>
+	<name>TagV3.0_U575VGT</name>
 	<comment></comment>
 	<projects>
 	</projects>
